--- a/client/src/App.css
+++ b/client/src/App.css
@@ -132,3 +132,14 @@ a:link, a:visited {
   font-size: 15px;
   padding-left: 30px;
 }
+
+.delete {
+  display: block;
+  width: 100%;
+  border: none;
+  background-color: #e05858;
+  padding: 14px 28px;
+  font-size: 16px;
+  cursor: pointer;
+  text-align: center;
+}
