--- a/client/src/App.css
+++ b/client/src/App.css
@@ -124,6 +124,7 @@ a:link, a:visited {
 .box-container {
   background-color: #85bba7;
   padding-top: 10px;
+  padding-bottom: 10px;
 }
 .box > div {
   background-color: #f1f1f1;
@@ -131,6 +132,7 @@ a:link, a:visited {
   line-height: 15px;
   font-size: 15px;
   padding-left: 30px;
+  padding-right: 30px;
 }
 
 .delete {
@@ -153,14 +155,14 @@ a:link, a:visited {
   background-color: #e05858;
   display: flex;
   flex-wrap: wrap;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(214, 214, 214);
   padding-top: 0px;
 }
 
 .comment > div {
   background-color: #f1f1f1;
-  width: 1000px;
-  margin: 15px;
+  width: 1000000px;
+  margin: 10px;
   line-height: 15px;
   font-size: 15px;
   padding: 20px;
