--- a/client/src/App.css
+++ b/client/src/App.css
@@ -41,7 +41,7 @@
   position: sticky;
   top: 0;
   width: 100%;
-  background-color: #1e1b2b;
+  background-color: #0D6EFD;
   color: #fff;
   display: flex;
   padding: 0 16px;
