--- a/client/src/components/Blog/blog.css
+++ b/client/src/components/Blog/blog.css
@@ -59,3 +59,39 @@
     padding-bottom: 10px;
     margin: 0px 20%;
 }
+
+
+.post-block {
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #c7c5c5;
+    padding-top: 0px;
+    /* width: 300%; */
+
+}
+
+.post-block>div {
+    background-color: #ffffff;
+    color: black;
+    box-sizing: border-box;
+    margin: 5px;
+    line-height: 15px;
+    font-size: 15px;
+    padding: 20px;
+    width: 1000000px;
+}
+
+.post-block>a {
+    background-color: #ffffff;
+    color: black;
+    box-sizing: border-box;
+    margin: 5px;
+    line-height: 15px;
+    font-size: 15px;
+    padding: 20px;
+    width: 1000000px;
+}
+
+.center-post {
+    text-align: left;
+}
