--- a/client/src/components/Comment/comment.css
+++ b/client/src/components/Comment/comment.css
@@ -2,3 +2,27 @@
     padding-top: 10px;
     padding-right: 10px;
 }
+
+
+.comment {
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #c7c5c5;
+    padding-top: 0px;
+}
+
+.comment>div {
+    background-color: #f1f1f1;
+    color: black;
+    width: 100000px;
+    box-sizing: border-box;
+    margin: 5px;
+    line-height: 15px;
+    font-size: 15px;
+    padding: 20px;
+}
+
+.toprow {
+    display: flex;
+    justify-content: space-between;
+}
