--- a/client/src/components/NavBar/navbar.css
+++ b/client/src/components/NavBar/navbar.css
@@ -36,3 +36,42 @@
   font: inherit;
   cursor: pointer;
 }
+
+.nav {
+  position: sticky;
+  top: 0;
+  width: 100%;
+  background-color: #0D6EFD;
+  color: #fff;
+  display: flex;
+  padding: 0 16px;
+  align-items: center;
+  height: 56px;
+  font: 500 20px/32px Roboto, "Helvetica Neue", sans-serif;
+  justify-content: space-between;
+}
+
+.nav>div {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.test {
+  color: black;
+}
+
+.vl {
+  border-left: 3px solid rgb(255, 255, 255);
+  height: 15px;
+  padding-left: 10px;
+  padding-right: 15px;
+}
+
+.dropdown {
+  padding-right: 15px;
+}
+
+.navopt {
+  padding-right: 25px;
+}
