--- a/client/src/components/Blog/blog.css
+++ b/client/src/components/Blog/blog.css
@@ -25,7 +25,7 @@
 .flex-container {
     display: flex;
     flex-wrap: wrap;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(204, 247, 255);
     padding-top: 0px;
     justify-content: center;
 }
@@ -41,7 +41,7 @@
 }
 
 .flex-entry {
-    background-color: #f1f1f1;
+    background-color: #ffffff;
     width: 350px;
     margin: 10px;
     text-align: center;
