--- a/client/src/components/Comment/comment.css
+++ b/client/src/components/Comment/comment.css
@@ -12,11 +12,12 @@
 }
 
 .comment>div {
-    background-color: #f1f1f1;
+    //background-color: #f1f1f1;
+    background-color: #ffffff;
     color: black;
     width: 100000px;
     box-sizing: border-box;
-    margin: 5px;
+    margin: 1px;
     line-height: 15px;
     font-size: 15px;
     padding: 20px;
