--- a/client/src/components/Post/post.css
+++ b/client/src/components/Post/post.css
@@ -1,6 +1,8 @@
 .page-container {
-    background-color: rgb(204, 247, 255);
+    //background-color: rgb(204, 247, 255);
+    background-color: rgb(255, 255, 255);
     margin: 2.5% 15%;
+    border: 0px solid #c7c5c5;
 }
 
 .likes-container {
@@ -42,7 +44,7 @@
 
 
 .delete-icon {
-    background: rgb(226, 113, 113);
+    background: #dc3545 ;
     color: black;
     border: none;
     font: inherit;
@@ -53,7 +55,7 @@
 }
 
 .delete-icon-post {
-    background: rgb(226, 113, 113);
+    background: #dc3545 ;
     color: black;
     border: none;
     font: inherit;
@@ -64,7 +66,7 @@
 }
 
 .edit-icon {
-    background: rgb(113, 162, 226);
+    background: #0d6efd ;
     color: black;
     border: none;
     font: inherit;
@@ -76,7 +78,7 @@
 }
 
 .rise-icon {
-    background: rgb(113, 226, 128);
+    background: #0d6efd   ;
     color: black;
     border: none;
     font: inherit;
