--- a/client/src/components/Post/post.css
+++ b/client/src/components/Post/post.css
@@ -66,7 +66,8 @@
 }
 
 .edit-icon {
-    background: #0d6efd ;
+    //background: #0d6efd ;
+    background: #712CF9 ;
     color: black;
     border: none;
     font: inherit;
@@ -78,7 +79,8 @@
 }
 
 .rise-icon {
-    background: #0d6efd   ;
+    //background: #0d6efd ;
+    background: #712CF9 ;
     color: black;
     border: none;
     font: inherit;
@@ -87,4 +89,8 @@
     border-radius: 5px;
     padding: 10px 13px;
     margin-right: 5px;
+}
+
+.btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
+    background-color: #712CF9  !important;
 }
