--- a/client/src/components/Blog/blog.css
+++ b/client/src/components/Blog/blog.css
@@ -13,7 +13,7 @@
     margin-left: 10px;
 
     background: #0d6efd ;
-    background: #712CF9;
+    background: #7952B3;
     color: white;
     border: none;
     font: inherit;
