--- a/client/src/components/Comment/comment.css
+++ b/client/src/components/Comment/comment.css
@@ -27,3 +27,9 @@
     display: flex;
     justify-content: space-between;
 }
+
+/* @media (max-width: 800px) {
+    .toprow {
+      flex-direction: column;
+    }
+  } */
