--- a/client/src/components/NavBar/navbar.css
+++ b/client/src/components/NavBar/navbar.css
@@ -42,8 +42,8 @@
   top: 0;
   width: 100%;
   //background-color: #0D6EFD;
-  //background-color: #7952B3;
-  background-color: #712CF9;
+  background-color: #7952B3;
+  //background-color: #712CF9;
   color: #fff;
   display: flex;
   padding: 0 16px;
@@ -94,4 +94,27 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+
+
+@media (max-width: 800px) {
+  .nav {
+    position: sticky;
+    top: 0;
+    width: 100%;
+    background-color: #7952B3;
+    color: #fff;
+    display: flex;
+    padding: 0 px;
+    align-items: center;
+    height: 56px;
+    font: 500 20px/32px Roboto, "Helvetica Neue", sans-serif;
+    justify-content: space-between;
+    z-index: 1;
+  }
+
+  .dropdown {
+    padding-left: 5px;
+  }
 }
