edit blogs and posts

--- a/client/src/components/Blog/blog.css
+++ b/client/src/components/Blog/blog.css
@@ -147,6 +147,16 @@
     }
 }
 
-.testy {
-    margin: 0 auto;
+.paragraph {
+    white-space: pre-line;
+}
+
+.clear-img {
+    margin-left: 5px;
+    align-self: flex-end;
+}
+
+.clear-img-group {
+    display: flex;
+    margin-top: 10px;
 }
