--- a/client/src/components/Blog/blog.css
+++ b/client/src/components/Blog/blog.css
@@ -124,9 +124,9 @@
 }
 
 .image-icon {
-    width: 200px;
+    width: 100%;
     height: 200px;
-    border-radius: 50%;
+    padding: 0px 30px;
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -137,6 +137,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 20px;
 }
 
 
