removed media from css

--- a/client/src/components/Blog/blog.css
+++ b/client/src/components/Blog/blog.css
@@ -141,13 +141,13 @@
 }
 
 
-@media (max-width: 1000px) {
+/* @media (max-width: 1000px) {
     .image-icon {
         width: 100%;
         height: 56.25%;
     }
 }
-
+ */
 .paragraph {
     white-space: pre-line;
 }
