--- a/client/src/components/NavBar/navbar.css
+++ b/client/src/components/NavBar/navbar.css
@@ -95,7 +95,7 @@
 }
 
 
-
+/* 
 @media (max-width: 800px) {
   .nav {
     position: sticky;
@@ -115,4 +115,4 @@
   .dropdown {
     padding-left: 5px;
   }
-}
+} */
