--- a/client/src/components/Post/post.css
+++ b/client/src/components/Post/post.css
@@ -137,7 +137,7 @@
     height: 100%;
 }
 
-/* 
+
 @media (max-width: 1000px) {
     .image-full {
         width: 100%;
@@ -156,4 +156,4 @@
         flex-direction: column;
         min-height: 100%;
     }
-} */
+}
